@@ -269,26 +269,74 @@ var Parser = (function (scope) {
     }
 
     function greaterthan(a, b) {
+        var vala, valb, numa, numb;
+        vala = (a instanceof Array) ? a.join() : a;
+        valb = (b instanceof Array) ? b.join() : b;
+        numa = toNumber(vala);
+        numb = toNumber(valb);
+        if (!isNaN(numa) && !isNaN(numa)) {
+            return Number(numa) > Number(numb);
+        }
         return a > b;
     }
 
     function lessthan(a, b) {
+        var vala, valb, numa, numb;
+        vala = (a instanceof Array) ? a.join() : a;
+        valb = (b instanceof Array) ? b.join() : b;
+        numa = toNumber(vala);
+        numb = toNumber(valb);
+        if (!isNaN(numa) && !isNaN(numa)) {
+            return Number(numa) < Number(numb);
+        }
         return a < b;
     }
 
     function greaterequal(a, b) {
+        var vala, valb, numa, numb;
+        vala = (a instanceof Array) ? a.join() : a;
+        valb = (b instanceof Array) ? b.join() : b;
+        numa = toNumber(vala);
+        numb = toNumber(valb);
+        if (!isNaN(numa) && !isNaN(numa)) {
+            return Number(numa) >= Number(numb);
+        }
         return a >= b;
     }
 
     function lessequal(a, b) {
+        var vala, valb, numa, numb;
+        vala = (a instanceof Array) ? a.join() : a;
+        valb = (b instanceof Array) ? b.join() : b;
+        numa = toNumber(vala);
+        numb = toNumber(valb);
+        if (!isNaN(numa) && !isNaN(numa)) {
+            return Number(numa) <= Number(numb);
+        }
         return a <= b;
     }
 
     function equal(a, b) {
+        var vala, valb, numa, numb;
+        vala = (a instanceof Array) ? a.join() : a;
+        valb = (b instanceof Array) ? b.join() : b;
+        numa = toNumber(vala);
+        numb = toNumber(valb);
+        if (!isNaN(numa) && !isNaN(numa)) {
+            return Number(numa) == Number(numb);
+        }
         return a == b;
     }
 
     function notequal(a, b) {
+        var vala, valb, numa, numb;
+        vala = (a instanceof Array) ? a.join() : a;
+        valb = (b instanceof Array) ? b.join() : b;
+        numa = toNumber(vala);
+        numb = toNumber(valb);
+        if (!isNaN(numa) && !isNaN(numa)) {
+            return Number(numa) != Number(numb);
+        }
         return a != b;
     }
 
